@@ -316,6 +316,7 @@ library:
     @tab Used in Sierra CD-ROM games.
 @item Smacker                   @tab   @tab X
     @tab Multimedia format used by many games.
+@item SMJPEG                    @tab   @tab X
 @item Sony OpenMG (OMA)         @tab   @tab X
     @tab Audio format used in Sony Sonic Stage and Sony Vegas.
 @item Sony PlayStation STR      @tab   @tab X
